@@ -74,6 +74,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 473745  must-be-redirected function - strlen
 473870  FreeBSD 14 applications fail early at startup
 473944  Handle mold linker split RW PT_LOAD segments correctly
+474332  aligned_alloc under Valgrind returns nullptr when alignment is not a multiple of sizeof(void *)
 n-i-bz  Allow arguments with spaces in .valgrindrc files
 
 To see details of a given bug, visit
